@@ -5,6 +5,7 @@ Changes in version 0.x (2004-xx-xx)
 * Added Authentication.getDetails() to DaoAuthenticationProvider response
 * Added DaoAuthenticationProvider.hideUserNotFoundExceptions (default=true)
 * Added PasswordAuthenticationProvider for password-validating DAOs (eg LDAP)
+* Added FilterToBeanProxy compatibility with ContextLoaderServlet (lazy inits)
 * Extracted removeUserFromCache(String) to UserCache interface
 * Improved ConfigAttributeEditor so it trims preceding and trailing spaces
 * Fixed EH-CACHE-based caching implementation behaviour when cache exists
